--- a/fwlog.au/package.json
+++ b/fwlog.au/package.json
@@ -9,10 +9,13 @@
   "scripts": {},
   "license": "MIT",
   "dependencies": {
-    "aurelia-bootstrapper": "^2.3.0",
     "aurelia-animator-css": "^1.0.4",
+    "aurelia-bootstrapper": "^2.3.0",
+    "aurelia-polyfills": "^1.3.0",
     "bluebird": "^3.5.2",
-    "aurelia-polyfills": "^1.3.0"
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.7"
   },
   "peerDependencies": {},
   "devDependencies": {
